Initiating markup for sign-up form

--- a/index.html
+++ b/index.html
@@ -19,6 +19,39 @@
             <p class="travel">Travel</p>
         </div>
     </header>
+    <main>
+        <div class="form-container">
+            <h1>Come fly with us!</h1>
+            <form action="#" method="post">
+                <ul>
+                    <li>
+                        <label for="first-name">FIRST NAME</label>
+                        <input type="text" id="first-name" name="first_name" placeholder="e.g. &quot;John&quot;" required>
+                    </li>
+                    <li>
+                        <label for="last-name">LAST NAME</label>
+                        <input type="text" id="last-name" name="last_name" placeholder="e.g. &quot;Doe&quot;" required>
+                    </li>
+                    <li>
+                        <label for="email">E-MAIL</label>
+                        <input type="email" id="email" name="email" placeholder="e.g. &quot;john@doe.com&quot;" required>
+                    </li>
+                    <li>
+                        <label for="telephone">PHONE NUMBER</label>
+                        <input type="tel" id="telephone" name="phone_number" placeholder="e.g. &quot;12345678&quot;">
+                    </li>
+                    <li>
+                        <label for="password">PASSWORD</label>
+                        <input type="text" id="password" name="password" required>
+                    </li>
+                    <li>
+                        <label for="confirm-password">CONFIRM PASSWORD</label>
+                        <input type="text" id="confirm-password" name="confirm_password" required>
+                    </li>
+                </ul>
+            </form>
+        </div>
+    </main>
     
 </body>
 </html>
