--- a/index.html
+++ b/index.html
@@ -26,30 +26,32 @@
                 <ul>
                     <li>
                         <label for="first-name">FIRST NAME</label>
-                        <input type="text" id="first-name" name="first_name" placeholder="e.g. &quot;John&quot;" required>
+                        <input type="text" id="first-name" name="first_name" required>
                     </li>
                     <li>
                         <label for="last-name">LAST NAME</label>
-                        <input type="text" id="last-name" name="last_name" placeholder="e.g. &quot;Doe&quot;" required>
+                        <input type="text" id="last-name" name="last_name" required>
                     </li>
                     <li>
                         <label for="email">E-MAIL</label>
-                        <input type="email" id="email" name="email" placeholder="e.g. &quot;john@doe.com&quot;" required>
+                        <input type="email" id="email" name="email" required>
                     </li>
                     <li>
                         <label for="telephone">PHONE NUMBER</label>
-                        <input type="tel" id="telephone" name="phone_number" placeholder="e.g. &quot;12345678&quot;">
+                        <input type="tel" id="telephone" name="phone_number">
                     </li>
                     <li>
                         <label for="password">PASSWORD</label>
-                        <input type="text" id="password" name="password" required>
+                        <input type="password" id="password" name="password" required>
                     </li>
                     <li>
                         <label for="confirm-password">CONFIRM PASSWORD</label>
-                        <input type="text" id="confirm-password" name="confirm_password" required>
+                        <input type="password" id="confirm-password" name="confirm_password" required>
                     </li>
                 </ul>
+                <button class="create-account" type="submit">CREATE ACCOUNT</button>
             </form>
+            <p class="existing-user">Already have an account? <a href="#">Log in</a></p>
         </div>
     </main>
     
