Add asterisk as mandatory indicator

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Fredoka:wght@300&family=Roboto:wght@100;400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
     <script src="./script.js" defer></script>
 </head>
 <body>
@@ -23,35 +24,38 @@
         <div class="form-container">
             <h1>Come fly with us!</h1>
             <form action="#" method="post">
+                <p class="mandatory"><span class="asterisk" aria-label="required">*</span>mandatory</p>
                 <ul>
                     <li>
-                        <label for="first-name">FIRST NAME</label>
+                        <label for="first-name">FIRST NAME<span class="asterisk" aria-label="required">*</span></label>
                         <input type="text" id="first-name" name="first_name" required>
                     </li>
                     <li>
-                        <label for="last-name">LAST NAME</label>
+                        <label for="last-name">LAST NAME<span class="asterisk" aria-label="required">*</span></label>
                         <input type="text" id="last-name" name="last_name" required>
                     </li>
                     <li>
-                        <label for="email">E-MAIL</label>
+                        <label for="email">E-MAIL<span class="asterisk" aria-label="required">*</span></label>
                         <input type="email" id="email" name="email" required>
                     </li>
                     <li>
-                        <label for="telephone">PHONE NUMBER</label>
-                        <input type="tel" id="telephone" name="phone_number">
+                        <label for="telephone">PHONE NUMBER<span class="asterisk" aria-label="required">*</span></label>
+                        <input type="tel" id="telephone" name="phone_number" required>
                     </li>
                     <li>
-                        <label for="password">PASSWORD</label>
+                        <label for="password">PASSWORD<span class="asterisk" aria-label="required">*</span></label>
                         <input type="password" id="password" name="password" required>
                     </li>
                     <li>
-                        <label for="confirm-password">CONFIRM PASSWORD</label>
-                        <input type="password" id="confirm-password" name="confirm_password" required>
+                        <label for="confirm-password">CONFIRM PASSWORD<span class="asterisk" aria-label="required">*</span></label>
+                        <input type="password" id="confirm-password" name="confirm_password" required disabled>
+                    </li>
+                    <li>
+                        <button class="create-account" type="submit">CREATE ACCOUNT</button>
                     </li>
                 </ul>
-                <button class="create-account" type="submit">CREATE ACCOUNT</button>
             </form>
-            <p class="existing-user">Already have an account? <a href="#">Log in</a></p>
+            <p class="existing-user">Already have an account? <a class="log-in" href="#">Log in</a></p>
         </div>
     </main>
     
