--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
                     </li>
                     <li>
                         <label for="email">E-MAIL<span class="asterisk" aria-label="required">*</span></label>
-                        <input type="email" id="email" name="email" required>
+                        <input type="email" id="email" name="email" pattern="^[a-zA-Z0-9!#$%&'*+/=?^_`{|}~-](.)+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+).*$" required>
                     </li>
                     <li>
                         <label for="telephone">PHONE NUMBER<span class="asterisk" aria-label="required">*</span></label>
-                        <input type="tel" id="telephone" name="phone_number" required>
+                        <input type="tel" id="telephone" name="phone_number" placeholder="e.g. 87654321" inputmode="tel" pattern="[0-9]{8}" required>
                     </li>
                     <li>
                         <label for="password">PASSWORD<span class="asterisk" aria-label="required">*</span></label>
-                        <input type="password" id="password" name="password" required>
+                        <input type="password" id="password" name="password" minlength="8" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).*$" required>
                     </li>
                     <li>
                         <label for="confirm-password">CONFIRM PASSWORD<span class="asterisk" aria-label="required">*</span></label>
