--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </li>
                     <li>
                         <label for="email">E-MAIL<span class="asterisk" aria-label="required">*</span></label>
-                        <input type="email" id="email" name="email" pattern="^[a-zA-Z0-9!#$%&'*+/=?^_`{|}~-](.)+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+).*$" autocomplete="off" required>
+                        <input type="email" id="email" name="email" autocomplete="off" required>
                         <p class="error-help" id="error-email"></p>
                     </li>
                     <li>
