--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <main>
         <div class="form-container">
             <h1>Come fly with us!</h1>
+            <p class="mandatory"><span class="asterisk" aria-label="required">*</span>mandatory</p>
             <form action="#" method="post">
-                <p class="mandatory"><span class="asterisk" aria-label="required">*</span>mandatory</p>
                 <ul>
                     <li>
                         <label for="first-name">FIRST NAME<span class="asterisk" aria-label="required">*</span></label>
@@ -48,7 +48,7 @@
                     </li>
                     <li>
                         <label for="password">PASSWORD<span class="asterisk" aria-label="required">*</span></label>
-                        <input type="password" id="password" name="password" minlength="8" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).*$" autocomplete="new-password" required>
+                        <input type="password" id="password" name="password" title="Password must contain at least one uppercase letter (A-Z), one lowercase letter (a-z) and one number (0-9)" minlength="8" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).*$" autocomplete="new-password" required>
                         <p class="error-help" id="error-password"></p>
                     </li>
                     <li>
