Add footer with credits for logo and image

--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
             <p class="existing-user">Already have an account? <a class="log-in" href="#">Log in</a></p>
         </div>
     </main>
+    <footer>
+        <p>Icon by <a href="https://freeicons.io/profile/3">icon king1</a> on <a href="https://freeicons.io">freeicons.io</a></p>
+        <p>Photo by <a href="https://unsplash.com/it/@sadswim?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Ian Dooley</a> on <a href="https://unsplash.com/photos/DuBNA1QMpPA?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></p>
+    </footer>
     
 </body>
 </html>
