Add div insider header to contain logo and text

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 <body>
     <p class="para-author">Created by <a class="github-link" href="https://github.com/rasmushaislund">Rasmus H.</a></p>
     <header>
-        <img class="logo" src="./img/air-ballon-white.svg" alt="icon showing an air ballon">
-        <div class="company name">
-            <p class="freedom">FREEDOM<sup>TM</sup></p>
-            <p class="travel">Travel</p>
+        <div class="header">
+            <img class="logo" src="./img/air-ballon-white.svg" alt="icon showing an air ballon">
+            <div class="company name">
+                <p class="freedom">FREEDOM<sup>TM</sup></p>
+                <p class="travel">Travel</p>
+            </div>
         </div>
     </header>
     <main>
