Add github logo to author github link

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-    <p class="para-author">Created by <a class="github-link" href="https://github.com/rasmushaislund">Rasmus H.</a></p>
+    <p class="para-author">Created by <a class="github-link" href="https://github.com/rasmushaislund">Rasmus H. <img class="github-logo" src="./img/github-logo.svg" alt="github logo"></a></p>
     <header>
         <div class="header">
             <img class="logo" src="./img/air-ballon-white.svg" alt="icon showing an air ballon">
-            <div class="company name">
+            <div class="company-name">
                 <p class="freedom">FREEDOM<sup>TM</sup></p>
                 <p class="travel">Travel</p>
             </div>
