--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <li>
                         <label for="password">PASSWORD<span class="asterisk" aria-label="required">*</span></label>
                         <input type="password" id="password" name="password" title="Password must contain at least one uppercase letter (A-Z), one lowercase letter (a-z) and one number (0-9)" minlength="8" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).*$" autocomplete="new-password" required>
-                        <p class="error-help" id="error-password"></p>
+                        <p class="error-help" id="error-password-8char"><img class="password-help" src="./img/github-logo.svg" alt="logo"> testtesttesttest</p>
                     </li>
                     <li>
                         <label for="confirm-password">CONFIRM PASSWORD<span class="asterisk" aria-label="required">*</span></label>
