--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
                         <input type="password" id="password" name="password" title="Password must contain at least one uppercase letter (A-Z), one lowercase letter (a-z) and one number (0-9)" minlength="8" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).*$" autocomplete="new-password" required>
                         <div class="error-psw" id="error-psw-8char">
                             <img class="password-help-icon" src="./img/wrong-icon.svg" alt="logo">
-                            <p class="error-help" id="error-password-8char">Must contain at least 8 characters</p>
+                            <p class="error-help" id="error-password-8char">At least 8 characters</p>
                         </div>
                         <div class="error-psw" id="error-psw-uppercase">
                             <img class="password-help-icon" src="./img/wrong-icon.svg" alt="logo">
-                            <p class="error-help" id="error-password-uppercase">Must contain at least one uppercase letter (A-Z)</p>
+                            <p class="error-help" id="error-password-uppercase">At least one uppercase character (A-Z)</p>
                         </div>
                         <div class="error-psw" id="error-psw-lowercase">
                             <img class="password-help-icon" src="./img/wrong-icon.svg" alt="logo">
-                            <p class="error-help" id="error-password-lowercase">Must contain at least one lowercase letter (a-z)</p>
+                            <p class="error-help" id="error-password-lowercase">At least one lowercase character (a-z)</p>
                         </div>
                         <div class="error-psw" id="error-psw-number">
                             <img class="password-help-icon" src="./img/wrong-icon.svg" alt="logo">
-                            <p class="error-help" id="error-password-number">Must contain at least one number</p>
+                            <p class="error-help" id="error-password-number">At least one number</p>
                         </div>
                     </li>
                     <li>
@@ -82,7 +82,8 @@
         </div>
     </main>
     <footer>
-        <p>Icon by <a href="https://freeicons.io/profile/3">icon king1</a> on <a href="https://freeicons.io">freeicons.io</a></p>
+        <p>Icons by <a href="https://freeicons.io/profile/3">icon king1</a> on <a href="https://freeicons.io">freeicons.io</a></p>
+        <p>Icon by <a class="link_pro" href="https://freeicons.io/office-and-workstation-icons-6/ok-icon-18961">Free Preloaders</a>on <a href="https://freeicons.io">freeicons.io</a></p>
         <p>Photo by <a href="https://unsplash.com/it/@sadswim?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Ian Dooley</a> on <a href="https://unsplash.com/photos/DuBNA1QMpPA?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></p>
     </footer>
     
