--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </li>
                     <li>
                         <label for="password">PASSWORD<span class="asterisk" aria-label="required">*</span></label>
-                        <input type="password" id="password" name="password" title="Password must contain at least one uppercase letter (A-Z), one lowercase letter (a-z) and one number (0-9)" minlength="8" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).*$" autocomplete="new-password" required>
+                        <input type="password" id="password" name="password" minlength="8" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).*$" autocomplete="new-password" required>
                         <div class="error-psw" id="error-psw-8char">
                             <img class="password-help-icon" src="./img/wrong-icon.svg" alt="logo">
                             <p class="error-help" id="error-password-8char">At least 8 characters</p>
