--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
                         <label for="password">PASSWORD<span class="asterisk" aria-label="required">*</span></label>
                         <input type="password" id="password" name="password" minlength="8" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).*$" autocomplete="new-password" required>
                         <div class="error-psw" id="error-psw-8char">
-                            <img class="password-help-icon" src="./img/wrong-icon.svg" alt="logo">
+                            <img class="password-help-icon" id="icon-8char" src="./img/wrong-icon.svg" alt="logo">
                             <p class="error-help" id="error-password-8char">At least 8 characters</p>
                         </div>
                         <div class="error-psw" id="error-psw-uppercase">
-                            <img class="password-help-icon" src="./img/wrong-icon.svg" alt="logo">
+                            <img class="password-help-icon" id="icon-uppercase" src="./img/wrong-icon.svg" alt="logo">
                             <p class="error-help" id="error-password-uppercase">At least one uppercase character (A-Z)</p>
                         </div>
                         <div class="error-psw" id="error-psw-lowercase">
-                            <img class="password-help-icon" src="./img/wrong-icon.svg" alt="logo">
+                            <img class="password-help-icon" id="icon-lowercase" src="./img/wrong-icon.svg" alt="logo">
                             <p class="error-help" id="error-password-lowercase">At least one lowercase character (a-z)</p>
                         </div>
                         <div class="error-psw" id="error-psw-number">
-                            <img class="password-help-icon" src="./img/wrong-icon.svg" alt="logo">
+                            <img class="password-help-icon" id="icon-number" src="./img/wrong-icon.svg" alt="logo">
                             <p class="error-help" id="error-password-number">At least one number</p>
                         </div>
                     </li>
