Replace "8" with "eight" in <p> help text

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <input type="password" id="password" name="password" minlength="8" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).*$" autocomplete="new-password" required>
                         <div class="error-psw" id="error-psw-8char">
                             <img class="password-help-icon" id="icon-8char" src="./img/wrong-icon.svg" alt="logo">
-                            <p class="error-help" id="error-password-8char">At least 8 characters</p>
+                            <p class="error-help" id="error-password-8char">At least eight characters</p>
                         </div>
                         <div class="error-psw" id="error-psw-uppercase">
                             <img class="password-help-icon" id="icon-uppercase" src="./img/wrong-icon.svg" alt="logo">
